--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ colorama==0.4.6
 Flask==3.0.3
 Flask-Cors==4.0.1
 googlesearch-python==1.2.4
+gunicorn==22.0.0
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
@@ -15,6 +16,7 @@ lxml==5.2.2
 MarkupSafe==2.1.5
 nltk==3.8.1
 numpy==2.0.0
+packaging==24.1
 pandas==2.2.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
